[package]
name = "flex-rs-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "37.0.0"
chrono = { version = "0.4.24", features = ["serde"] }
mime_guess = "2.0.4"
polars = { version = "0.28.0", features = ["timezones", "parquet", "lazy", "json"]}
polars-arrow = "0.28.0"
polars-io = { version = "0.28.0", features = ["parquet"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
flex-rs-core = { path = "../flex-rs-core" }
serde = "1.0.160"
serde_json = "1.0.96"
regex = "1.7.3"
chrono-tz = "0.8.2"
anyhow = "1.0.70"
timespan = { version = "0.2.0", features = ["serde"] }
